# fetch-contract

./: Cargo.toml  README.md
src/: main.rs
